# tennessine

./: background.json  config.ini  gay_pride_flag.ini  log.ini  pyproject.toml  rainbow_flag.json  transgender_flag.json  transgender_pride_flag.ini
config/: config.ini
config/img/: gay_pride_flag.tsimg  transgender_pride_flag.tsimg  tsimg.vim
config/lang/: zh_cn.lang
tennessine/: config.py  dialog.py  image.py  main.py  radar_map.py  radarmap.py  sudoku.py  translate.py  world.py
