[tool.poetry]
name = "tennessine"
version = "0.1.0"
description = ""
authors = ["Ming Yue <mingfengpigeon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pynvim = "^0.5.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
